--- a/app/views/wares/index.html.erb
+++ b/app/views/wares/index.html.erb
@@ -81,7 +81,7 @@
       </td>
       <td><%= ware.ware_name %></td>
       <td><%= ware.provider_name %></td>
-      <td><%= ware.comment %></td>
+      <td><%= ware.comment.truncate(100) %></td>
       <%= tag.td class: 'center-cell', id: 'status-cell', status: ware.status do %>
         <%= ware.translated_status %>
       <% end %>
