--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,15 +1,19 @@
 @import "bootstrap";
 
+
+::first-letter {
+  text-transform: uppercase;
+}
+
+#ui-datepicker-div {z-index:2000 !important;}
+
+
 .content {
   font-family: Helvetica, Arial, Sans-Serif, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 98%;
   margin: 1em auto auto auto;
-
-  ::first-letter {
-    text-transform: uppercase;
-  }
 
   a:hover {
     text-decoration: none;
@@ -26,6 +30,7 @@
     padding: 1.5vw 1.5vw 0 1.5vw;
     margin: 0 auto;
     max-width: 1000px /* value of your choice which suits your alignment */
+
   }
 
   .button-add {
@@ -80,6 +85,7 @@
     right: 3%;
     top: 3%;
     z-index: 999;
+
     span {
       font-size: 2vw;
     }
@@ -122,8 +128,6 @@
     }
 
     .table.totals-table {
-      float: right;
-      width: 60%;
       display: block;
 
       .totals-row {
@@ -208,7 +212,7 @@
       text-align: center;
 
       img {
-        margin-right: 1vw;
+        margin: 0.2vw;
       }
     }
 
@@ -217,6 +221,7 @@
     }
 
     .total-cell {
+      text-align: center;
       width: 10%
     }
 
@@ -243,10 +248,6 @@
           color: white;
           text-decoration: none;
         }
-      }
-
-      td:first-letter {
-        text-transform: uppercase;
       }
     }
 
@@ -334,7 +335,6 @@
     }
   }
 }
-
 
 @media all and (max-width: 1024px) {
 
