--- a/app/views/extras/_form.html.erb
+++ b/app/views/extras/_form.html.erb
@@ -15,12 +15,12 @@
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-6 col-xl-6">
         <%= form.label t('ware_name') %>
-        <%= form.text_field :name, class: "form-control" %>
+        <%= form.text_field :name, class: "form-control", onkeyup: "javascript:capitalize(this.id, this.value);" %>
       </div>
 
       <div class="form-group col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
         <%= form.label t('category') %>
-        <%= form.select :category, Extra.distinct.pluck(:category), {:include_blank => true}, {required: true, class: 'form-control', id: 'extra_form_category'} %>
+        <%= form.select :category, Extra.distinct.pluck(:category), {:include_blank => true}, {required: true, class: 'form-control', onkeyup: "javascript:capitalize(this.id, this.value);", id: 'extra_form_category'} %>
       </div>
     </div>
     <div class="form-row">
