--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -42,12 +42,12 @@
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-6 col-xl-6">
         <%= form.label t('Description') %>
-        <%= form.text_field :name, class: "form-control", autocomplete: 'off' %>
+        <%= form.text_field :name, class: "form-control", onkeyup: "javascript:capitalize(this.id, this.value);", autocomplete: 'off' %>
       </div>
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-6 col-xl-6">
         <%= form.label t('comment') %>
-        <%= form.text_field :comment, class: "form-control", autocomplete: 'off' %>
+        <%= form.text_field :comment, class: "form-control", onkeyup: "javascript:capitalize(this.id, this.value);", autocomplete: 'off' %>
       </div>
     </div>
 
