--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,57 +1,46 @@
-<div class="header-project">
-  <table>
-    <tr>
-      <td>
-        <%= link_to t('create_new_project'), new_project_path, {class: 'btn btn-success', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
-      </td>
-      <td>
-        <h2 id="titleBadge" display=<%= controller_name %>>
-          <%= t(controller_name).to_s %>
-        </h2>
-      </td>
-      <td>
-      </td>
-    </tr>
-  </table>
-</div>
-<hr>
 
 <%= search_form_for @search do |form| %>
-  <div class="form">
-    <div class="row">
-      <h5> <%= form.label t('filtres') %> </h5>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
-        <%= form.label t('project') %>
-        <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort', onchange: 'this.form.submit();'} %>
+  <div class="ui form">
+
+    <div class="six fields">
+      <div class="two wide field add-button">
+        <%= link_to t('create_new_project'), new_project_path, {class: 'ui green button', :remote => true, 'data-toggle' => "modal", 'data-target' => '#modal-window'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="field">
+        <%= form.label t('project') %>
+        <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'item', id: 'project_sort', onchange: 'this.form.submit();'} %>
+      </div>
+
+      <div class="field">
         <%= form.label t('customer') %>
         <%= form.collection_select :customer_id_eq, Customer.all, :id, :name, {:include_blank => t('all_customers')}, {class: 'form-control', id: 'customer_sort', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="field">
         <%= form.label t('status') %>
-        <%= form.select :status_eq, Project.statuses.map {|status| [t(status[0]), status[1].to_i, {status: status[0]}]}, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
+        <%= form.select :status_eq, Project.statuses.map { |status| [t(status[0]), status[1].to_i, {status: status[0]}] }, {:include_blank => t('all_status')}, {class: 'form-control', id: 'status_sort_select', onchange: 'this.form.submit();'} %>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="field">
         <%= form.label t('from') %>
         <div class="picker-container">
           <%= form.text_field :date_gteq, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", autocomplete: 'off', id: "sortProjectFrom", class: "form-control", onchange: 'this.form.submit();' %>
         </div>
       </div>
-      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+      <div class="field">
         <%= form.label t('to') %>
         <div class="picker-container">
           <%= form.text_field :date_lteq, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", autocomplete: 'off', id: "sortProjectTo", class: "form-control", onchange: 'this.form.submit();' %>
         </div>
       </div>
+
     </div>
+
   </div>
 <% end %>
 
-<table class="table table-to-color">
+<table class="ui striped selectable table table-to-color">
   <thead class=thead-dark>
   <tr>
-    <th class="center-cell">
+    <th class="center aligned">
       <%= sort_link(@search, :id, t('id_locale')) %>
     </th>
     <th class="small-column">
@@ -63,17 +52,17 @@
     <th class="description-header">
       <%= sort_link(@search, :description, t('description')) %>
     </th>
-    <th class="center-cell">
+    <th class="center aligned">
       <%= sort_link(@search, :date, t('date_locale')) %>
     </th>
-    <th class="center-cell">
+    <th class="center aligned">
       <%= sort_link(@search, :status, t('status')) %>
     </th>
-    <th class="right-cell">
-      <%= sort_link(@search, :gross_cost, t('gross_cost').to_s + ' (€)') %>
+    <th class="right aligned">
+      <%= sort_link(@search, :total_gross, t('gross_cost').to_s + ' (€)') %>
     </th>
-    <th class="right-cell">
-      <%= sort_link(@search, :gross_cost, t('total').to_s + ' (€)') %>
+    <th class="right aligned">
+      <%= sort_link(@search, :total, t('total').to_s + ' (€)') %>
     </th>
     <th></th>
   </tr>
@@ -86,43 +75,38 @@
     </tr>
   <% end %>
   <% @projects.each do |project| %>
-    <tr>
-      <td class="center-cell">
-        <%= link_to '#' + project.id.to_s, project_path(project.id), class: 'btn btn-info' %>
+    <tr class="">
+      <td class="center aligned">
+        <%= link_to '#' + project.id.to_s, project_path(project.id), class: 'ui grey button' %>
       </td>
       <td><%= project.customer ? project.customer.name : nil %></td>
       <td><%= project.name %></td>
       <td><%= project.description %></td>
-      <td class="center-cell"><%= project.date ? l(project.date) : "" %></td>
-      <%= tag.td class: 'center-cell', id: 'status-cell', status: project.status do %>
-        <%= project.translated_status %>
+      <td class="center aligned"><%= project.date ? l(project.date) : "" %></td>
+      <%= tag.td class: 'center aligned status-cell', status: project.status do %>
+        <div> <%= project.translated_status %> </div>
       <% end %>
-      <td class="right-cell"><%= number_with_precision project.total_gross, :precision => 2 %></td>
-      <td class="right-cell"><%= number_with_precision project.total, :precision => 2 %></td>
-      <td class="center-cell">
+      <td class="right aligned"><%= number_with_precision project.total_gross, :precision => 2 %></td>
+      <td class="right aligned"><%= number_with_precision project.total, :precision => 2 %></td>
+      <td class="center aligned">
         <%= link_to project_path(project) do %>
-          <%= image_tag("open-icon.png", size: "30x30") %>
+          <%= image_tag("open-icon.png", size: "27x27") %>
         <% end %>
         <%= link_to edit_project_path(project), remote: true do %>
-          <%= image_tag("edit-icon.png", size: "30x30") %>
+          <%= image_tag("edit-icon.png", size: "27x27") %>
         <% end %>
         <%= link_to project, method: :delete, data: {confirm: t('confirm_delete')} do %>
-          <%= image_tag("delete-icon.png", size: "30x30") %>
+          <%= image_tag("delete-icon.png", size: "27x27") %>
         <% end %>
       </td>
     </tr>
   <% end %>
   </tbody>
 </table>
-<br>
-<div class="flickr_pagination">
   <%= will_paginate @projects %>
-</div>
 
-<div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-    <div class="modal-content">
-    </div>
+<div id="modal-window" class="ui modal">
+  <div class="content">
   </div>
 </div>
 
