--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Greday</title>
+  <title><%= company.short_name %></title>
+
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -10,62 +11,55 @@
   <%= favicon_link_tag asset_path('favicon.png'), :rel => 'icon', :type => 'image/png' %>
 
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Greday</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+<div class="ui inverted attached menu">
+  <a class="item" href="/projects" id="logo"> <%= company.short_name.upcase %> </a>
+  <div class="menu">
     <% if current_user %>
       <%= content_tag :div, class: "locale", data: {locale: current_user.locale} do %>
       <% end %>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/projects"> <%= t('projects').capitalize %>  </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/wares"> <%= t('wares').capitalize %> </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/services"> <%= t('services').capitalize %> </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/customers"> <%= t('customers').capitalize %> </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/extras"> <%= t('extras').capitalize %> </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/quotations"> <%= t('quotations').capitalize %> </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/invoices"> <%= t('invoices').capitalize %> </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/payments"> <%= t('payments').capitalize %> </a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <%= link_to t('FR'), {:controller => '/application', :action => 'change_locale', :id => 'fr'}, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to t('EN'), {:controller => '/application', :action => 'change_locale', :id => 'en'}, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to(t('logout'), destroy_user_session_path, method: :delete, class: "nav-link logout-button") %>
-        </li>
-      </ul>
+      <a class="blue item" href="/projects"> <%= t('projects').capitalize %>  </a>
 
+      <a class="violet item" href="/wares"> <%= t('wares').capitalize %> </a>
+
+      <a class="red item" href="/services"> <%= t('services').capitalize %> </a>
+
+      <a class="brown item" href="/customers"> <%= t('customers').capitalize %> </a>
+
+      <a class="yellow item" href="/extras"> <%= t('extras').capitalize %> </a>
+
+      <a class="teal item" href="/quotations"> <%= t('quotations').capitalize %> </a>
+
+      <a class="olive item" href="/invoices"> <%= t('invoices').capitalize %> </a>
+
+      <a class="green item" href="/payments"> <%= t('payments').capitalize %> </a>
+      </div>
     <% end %>
-  </div>
-</nav>
+
+    <div class="right menu">
+
+      <%= link_to t('FR'), {:controller => '/application', :action => 'change_locale', :id => 'fr'}, class: "item" %>
+
+      <%= link_to t('EN'), {:controller => '/application', :action => 'change_locale', :id => 'en'}, class: "item" %>
+
+      <%= link_to(t('logout'), destroy_user_session_path, method: :delete, class: "item logout-button") %>
+    </div>
+
+    </div>
 
 <% if notice %>
-  <p id="notice" class="alert alert-success"><%= notice %></p>
+  <div id="notice" class="ui success floating message">
+    <div class="header">
+      <%= notice %>
+    </div>
+  </div>
 <% end %>
+
 <% if alert %>
-  <p id="notice" class="alert alert-danger"><%= alert %></p>
+  <div id="notice" class="ui negative floating message">
+    <div class="header">
+      <%= alert %>
+    </div>
+  </div>
 <% end %>
 
 <body>
@@ -73,9 +67,7 @@
   <%= yield %>
 </div>
 
-
 </body>
-
 </html>
 
 
